--- a/styles.css
+++ b/styles.css
@@ -1,73 +1,96 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    background: linear-gradient(135deg, #3498db 0%, #f1c40f 100%); /* changed background color */
+    overflow: hidden;
 }
 
 .container {
-    width: 90%;
-    max-width: 400px;
-    background: white;
-    padding: 20px;
+    background: linear-gradient(135deg, #9d9494 0%, #668281 100%);
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+    padding: 2rem;
+    position: relative;
+    overflow: hidden;
 }
 
-h2 {
+.login-form h2 {
     text-align: center;
+    margin-bottom: 1.5rem;
+    color: #8e44ad; /* changed text color */
 }
 
 .input-group {
-    margin-bottom: 15px;
+    margin-bottom: 1rem;
+    position: relative;
 }
 
 label {
     display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
+    margin-bottom: 0.5rem;
+    color: #2ecc71; /* changed text color */
 }
 
-input {
-    width: 100%;
-    padding: 10px;
+input[type="email"],
+input[type="password"],
+input[type="text"] {
+    width: 94%;
+    padding: 0.75rem;
     border: 1px solid #ddd;
     border-radius: 4px;
+    font-size: 1rem;
 }
 
-button {
-    width: 100%;
-    padding: 10px;
+.password-input {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.password-input input[type="password"],
+.password-input input[type="text"] {
+    flex-grow: 1;
+    padding-right: 40px;
+}
+
+.toggle-password {
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
     border: none;
-    background-color: #28a745;
-    color: white;
-    font-size: 16px;
-    border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    padding: 0;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-button:hover {
-    background-color: #218838;
+.toggle-password:focus {
+    outline: none;
 }
 
-.error {
-    color: red;
-    font-size: 12px;
+.toggle-password i {
+    color: #e74c3c; /* changed text color */
 }
 
-#response-message {
-    text-align: center;
-    color: red;
-    font-size: 14px;
+.checkbox-group {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+    justify-content: space-between;
 }
 
-/* Responsive Design */
-@media (max-width: 600px) {
-    .container {
-        padding: 15px;
-    }
-}
+.checkbox-group label {
+    margin-left
